--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@ Die Notwendigkeit dieses Protokolls war zu dieser Zeit sehr hoch, da \"altere St
 In folgendem Bild (siehe Bild \ref{fig:PPP-Visualisierung}) wird gezeigt f\"ur welchen Zweck das PPP-Protokoll bei DSL-Zug\"angen genutzt wird. Dabei stellt der heimische Router eine feste virtuelle Verbindung zu der Gegenstelle des Providers her, welche (aktuell in Deutschland so geregelt) im Normalfall alle 24 Stunden neu aufgebaut wird, da dann die Verbindung seitens des Anbieters automatisch getrennt wird. \\
 \begin{figure}[h!]
  \centering
-  \includegraphics[width=0.5\textwidth]{gfx/PPP-Visualisierung}
+  \includegraphics[width=0.5\textwidth]{img/PPP-Visualisierung}
  \caption{Darstellung einer PPP-Verbindung zwischen Heimanwender und ISP (Entnommen aus \cite{PPP-Bild})}
  \label{fig:PPP-Visualisierung}
 \end{figure}
