Neues Kapitel Alternativen zu PPP

--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,9 @@ In folgendem Bild (siehe Bild \ref{fig:PPP-Visualisierung}) wird gezeigt f\"ur w
  \label{fig:PPP-Visualisierung}
 \end{figure}
 Neben DSL-Anschl\"ussen gibt es in Deutschland die Alternative des Kabel-Anschlusses. Bei Kabel-Anschl\"ussen wird nicht das PPP-Protokoll zum Aufbau einer Verbindung genutzt, sondern das DOCSIS-Protokoll zusammen mit einer DHCP-\"ahnlichen \cite{RFC3256} Funktionsweise. 
+\section{Section Heading Here}
+\section{Alternativen zu PPP}
+%
 \section{Conclusion} 
 The conclusion goes here. 
 \subsection{Subsection Heading Here} 
