--- a/main.tex
+++ b/main.tex
@@ -112,7 +112,7 @@ ein. Diese werden in Abbildung in den folgenden Abschnitten näher erläutert (v
  \label{fig:PPPoE_sequenz1}
 \end{figure}
 \subsubsection{Discovery}
-Das Ziel dieser Phase ist das Herausfinden der MAC-Adresse des Servers (auch Concentrator genannt)
+Das Ziel dieser Phase ist das Auffinden der MAC-Adresse des Servers (auch Concentrator genannt)
 sowie das Ableiten einer PPPoE Session-ID durch den Client (auch Host genannt).
 Abhängig von der Topologie können sich mehrere Server im Netzwerk befinden, welche in
 dieser Phase durch den Client entdeckt werden. Die discovery-Phase selbst ist Zustandslos, d.h.
