--- a/main.tex
+++ b/main.tex
@@ -52,15 +52,15 @@ in Verbindung mit Ethernet über die weit verbeitete PPPoE-Variante für die Üb
 über Direct Subscriber Line (DSL) Anschlüsse\cite{IEEEhowto:kopka}.
 An dieser Stelle wird exemplarisch der Kommunikationsablauf anhand von PPPoE aufgezeigt.
 \subsection{PPP over Ethernet}
-Dass PPPoE Protokoll ist in RFC 2516 spezifiziert und wurde ursprünglich
-von den Firmen UUNET, Redback Networks und Router Waree ntwickelt \cite{RFC2516}.
-PPPoE ermöglicht die Übertragung von PPP-Paketen auf Basis von Ethernet wodurch
+Das PPPoE Protokoll ist in RFC 2516 spezifiziert und wurde ursprünglich
+von den Firmen UUNET, Redback Networks und Router Waree entwickelt \cite{RFC2516}.
+PPPoE ermöglicht die Übertragung von PPP-Paketen auf Basis von Ethernet, wodurch
 die Authentifizierungsfunktionen von PPP mit den
 simultanen Zugriffsmöglichkeiten des Ethernet kombiniert werden.
-Die Notwendigkeit für PPPoE resultierte aus dem anfang dieses Jahrtausends
+Die Notwendigkeit für PPPoE resultierte aus dem Anfang dieses Jahrtausends
 einhergehenden Einzugs der DSL-Technologie und der notwendigen Umstrukturierung
-der benötigten Software und Hardware. Ziel war es ein Protokoll zu entwickeln
-welches die bis dahin vorherrschende Einwahl-Verfahren möglichst Kostengünstig
+der benötigten Software und Hardware. Ziel war es, ein Protokoll zu entwickeln,
+welches die bis dahin vorherrschende Einwahl-Verfahren möglichst kostengünstig
 ersetzt. Mit PPPoE war es einerseits möglich die bis dahin bestehenden Software-Stacks für PPP
 mit minimalen Anpassungen weiter zu verwenden und ließ sich andererseits mit einfacher
 und damit günstiger Hardware umsetzen\cite{dslapp}.
@@ -68,11 +68,11 @@ Eines der Haupteinsatzgebiete von PPPoE sind somit Breitbandzugänge über DSL-A
 Wireless-Zugängen oder Kabelmodems und wird
 auch von vielen Internet Service Providern (ISP) zu diesem Zweck eingesetzt \cite[p.88]{cisconut}.\\
 %
-Der strukturelle Aufbau eines typischen PPPoE-Pakets ist in \ref{fig:PPPoE_Bild} zu sehen.
+Der strukturelle Aufbau eines typischen PPPoE-Pakets ist in Abbildung \ref{fig:PPPoE_Bild} zu sehen.
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.5\textwidth]{img/pppoe_aufbau.jpg}
- \caption{Aufbau eines PPPoE-Pakets (Entnommen aus \cite{PPPoE_Bild})}
+ \caption{Aufbau eines PPPoE-Pakets (Entnommen aus \cite{PPPoEBild})}
  \label{fig:PPPoE_Bild}
 \end{figure}
 Hierbei ist die Verschachtelung der Protokolle der einzelnen Layer zu erkennen: Die unterste
@@ -103,20 +103,20 @@ Protocol & Protokolltyp des nächsten Layers\\
 \label{tab:PPPoE_fields}
 %
 Der Ablauf einer PPPoE-Verbindung teilt sich in die drei Phasen Discovery, Session und Terminate
-ein. Diese werden in Abbildung in den folgenden Abschnitten näher erläutert (vgl. \cite{RFC2516}).\\
+ein. Diese werden in Abbildung \ref{fig:PPPoEsequenz1} in den folgenden Abschnitten näher erläutert (vgl. \cite{RFC2516}).\\
 %
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.5\textwidth]{img/pppoe_sequenz1.png}
- \caption{Ablauf einer PPPoE-Session (Entnommen aus \cite{PPPoE_Bild})}
- \label{fig:PPPoE_sequenz1}
+ \caption{Ablauf einer PPPoE-Session (Entnommen aus \cite{PPPoEBild})}
+ \label{fig:PPPoEsequenz1}
 \end{figure}
 \subsubsection{Discovery}
 Das Ziel dieser Phase ist das Auffinden der MAC-Adresse des Servers (auch Concentrator genannt)
 sowie das Ableiten einer PPPoE Session-ID durch den Client (auch Host genannt).
 Abhängig von der Topologie können sich mehrere Server im Netzwerk befinden, welche in
-dieser Phase durch den Client entdeckt werden. Die discovery-Phase selbst ist Zustandslos, d.h.
-auf Seiten aller Kommunikations werden keine Verbindungsinformationen gespeichert.\\
+dieser Phase durch den Client entdeckt werden. Die Discovery-Phase selbst ist zustandslos, d.h.
+auf Seiten aller Kommunikationen werden keine Verbindungsinformationen gespeichert.\\
 Das erste gesendete PPPoE Active Discovery Initiation (PADI) Paket stellt ein Broadcast
 an alle im Netzwerk vorhanden Server dar. Dieses enthält den Namen des vom Client
 angefragten Service, auf welches Server mit einem
@@ -124,19 +124,19 @@ PPPoE Active Discovery Offer (PADO) Paket antworten. Das Antwortpaket
 hat als Zieladresse die des Clients und enthält neben dem Namen des Servers optional
 weitere vom Server angebotene Service-Namen. Es folgt ein PPPoE Active Discovery Request (PADR) Paket
 mit welchem der Client den von ihm nun gewählten Server und Service unter allen
-gefundenen direkt addressiert. Nach erhalt des PADR beginnt der Server mit dem Aufbau
+gefundenen direkt addressiert. Nach Erhalt des PADR beginnt der Server mit dem Aufbau
 einer PPP Session und bestätigt dies mit einem PPPoE Active Discovery Session-confirmation (PADS) Paket.
-Diese enthält auch eine Session-ID welche die folgende Session eindeutig Identifiziert.
+Diese enthält auch eine Session-ID, welche die folgende Session eindeutig Identifiziert.
 \subsubsection{Session}
 In der Sitzungsphase erfolgt die weitere Konfiguration der Verbindung, die Authentifikation des
-Clients sowie der eigentliche Datenaustausch. Dieser ist im gegensatz zur Discovery und Terminate
-Phase PPP spezifischim und im Abbildung \ref{} genauer dargestellt.
+Clients sowie der eigentliche Datenaustausch. Dieser ist im Gegensatz zur Discovery und Terminate
+Phase PPP-spezifisch und in Abbildung \ref{fig:PPPoEsequenz2} genauer dargestellt.
 %
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.5\textwidth]{img/pppoe_sequenz2.jpg}
- \caption{PPP-Spezifischer Teil eines PPPoE-Verbindungsaufbaus (Entnommen aus \cite{pppoe_sequenz2})}
- \label{fig:PPPoE_sequenz2}
+ \caption{PPP-Spezifischer Teil eines PPPoE-Verbindungsaufbaus (Entnommen aus \cite{pppoesequenz2})}
+ \label{fig:PPPoEsequenz2}
 \end{figure}
 % 
 \subsubsection{Terminate}
@@ -202,8 +202,8 @@ James F. Kurose / Keith W. Ross, Computernetzwerke, Pearson, 2012
 \bibitem{cisconut} Cisco IOS in a Nutshell \newblock James Boney, \newblock O'Reilly Media \newblock 2005
 \bibitem{dslapp} Implementation and Applications of DSL Technology, \newblock Philip Golden Hervé Dedieu, \newblock Krista S. Jacobsen, \newblock 1998
 %\bibitem{RFC1055} http://tools.ietf.org/html/rfc1055
-%\bibitem{PPPoE_Bild} Aufbau eines PPPoE\-Pakets,\newblock H3C \newblock http://www.h3c.com/portal/Products___Solutions/Technology/WAN/Technology_White_Paper/200911/654415_57_0.htm
-%\bibitem{pppoe_sequenz1} Ablauf eine PPPoE-Verbindung,\newblock xxx \newblock http://
-%\bibitem{pppoe_sequenz2} PPP-Spezifischer Teil eines PPPoE-Verbindungsaufbaus,\newblock xxx \newblock http://
+\bibitem{PPPoEBild} Aufbau eines PPPoE-Pakets,\newblock H3C \newblock http://www.h3c.com/portal/Products\_\_\_Solutions/Technology/WAN/Technology\_White\_Paper/200911/654415\_57\_0.htm
+\bibitem{pppoesequenz1} Ablauf eine PPPoE-Verbindung,\newblock xxx \newblock http://
+\bibitem{pppoesequenz2} PPP-Spezifischer Teil eines PPPoE-Verbindungsaufbaus,\newblock xxx \newblock http://
 \end{thebibliography} 
 \end{document} 
