--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,7 @@ in Verbindung mit Ethernet über die weit verbeitete PPPoE-Variante für die Üb
 An dieser Stelle wird exemplarisch der Kommunikationsablauf anhand von PPPoE aufgezeigt.
 \subsection{PPP over Ethernet}
 Das PPPoE Protokoll ist in RFC 2516 spezifiziert und wurde ursprünglich
-von den Firmen UUNET, Redback Networks und Router Waree entwickelt \cite{RFC2516}.
+von den Firmen UUNET Technologies, Redback Networks und RouterWare entwickelt \cite{RFC2516}.
 PPPoE ermöglicht die Übertragung von PPP-Paketen auf Basis von Ethernet, wodurch
 die Authentifizierungsfunktionen von PPP mit den
 simultanen Zugriffsmöglichkeiten des Ethernet kombiniert werden.
@@ -124,7 +124,7 @@ PPPoE Active Discovery Offer (PADO) Paket antworten. Das Antwortpaket
 hat als Zieladresse die des Clients und enthält neben dem Namen des Servers optional
 weitere vom Server angebotene Service-Namen. Es folgt ein PPPoE Active Discovery Request (PADR) Paket
 mit welchem der Client den von ihm nun gewählten Server und Service unter allen
-gefundenen direkt addressiert. Nach Erhalt des PADR beginnt der Server mit dem Aufbau
+gefundenen direkt adressiert. Nach Erhalt des PADR beginnt der Server mit dem Aufbau
 einer PPP Session und bestätigt dies mit einem PPPoE Active Discovery Session-confirmation (PADS) Paket.
 Diese enthält auch eine Session-ID, welche die folgende Session eindeutig Identifiziert.
 \subsubsection{Session}
