--- a/main.tex
+++ b/main.tex
@@ -182,6 +182,8 @@ In der Sitzungsphase erfolgt die weitere Konfiguration der Verbindung, die Authe
 Clients sowie der eigentliche Datenaustausch. Dieser ist im Gegensatz zur Discovery und Terminate
 Phase PPP-spezifisch und in Abbildung \ref{fig:PPPoEsequenz2} genauer dargestellt.
 %
+TODO: Ablauf für PPP-Session beschreiben
+%
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.5\textwidth]{img/pppoe_sequenz2.jpg}
