--- a/main.tex
+++ b/main.tex
@@ -182,15 +182,23 @@ In der Sitzungsphase erfolgt die weitere Konfiguration der Verbindung, die Authe
 Clients sowie der eigentliche Datenaustausch. Dieser ist im Gegensatz zur Discovery und Terminate
 Phase PPP-spezifisch und in Abbildung \ref{fig:PPPoEsequenz2} genauer dargestellt.
 %
-TODO: Ablauf für PPP-Session beschreiben
-%
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.5\textwidth]{img/pppoe_sequenz2.jpg}
  \caption{PPP-Spezifischer Teil eines PPPoE-Verbindungsaufbaus (Entnommen aus \cite{pppoesequenz2})}
  \label{fig:PPPoEsequenz2}
 \end{figure}
+%
+TODO: Ablauf für PPP-Session beschreiben\\
+Hierbei wird zunächst ein Link Establishment über das Link Control Protocol (LCP) durchgeführt.
+Daraufhin erfolgt eine optionale Authentifikation entweder über das Password Authentication Protocol (PAP)
+oder dem Challenge-Handshake Authentication Protocol (CHAP). Bei einem DSL-Anschluss entspricht dies
+dem Nachweis der Kenntnis der vom ISP mitgeteilten Anschlussdaten. Es erfolgt die Zuweisung einer
+Netzwerk-Adresse über das Network Control Protocol (NCP) und im Anschluss der Austausch der
+eigentlichen Nutzdaten. Die Verbindung kann nun jederzeit terminiert werden, z.B.
+aufgrund von Inaktivität oder einem Session-Timeout.
 % 
+%
 \subsubsection{Terminate}
 Die PPPoE Verbindung kann jederzeit von beiden Kommunikationspartner beendet werden. Hierfür sendet
 der Client oder der Server ein PPPoE Active Discovery Terminate (PADT) Paket. Nach Erhalt dieses
@@ -202,15 +210,8 @@ Pakets ist kein weiterer Datenaustausch über die Session erlaubt.
 Wie in der Einf\"uhrung erw\"ahnt, war das Point-to-Point Protocol notwendig, da die damals aktuellen Standards nicht alle mittlerweile ben\"otigten Anforderungen erf\"ullen konnten. Durch die einfache Handhabung der aufgebauten verbindung f\"ur Netzwerk-Schicht-Protokolle, ist vermutlich auch die grosse Verbreitung des Protokolls zu erkl\"aren. Bei fast allen M\"oglichkeiten eine Internetverbindung aufzubauen (sei es \"uber DSL oder im Mobilfunknetz) wird PPP als Einw\"ahlprotokoll genutzt. Zwar wird im Kabelnetz mittlerweile ein anderes Protokoll verwendet, doch durch die einfache Umsetzung des Point-to-Point Protokolls wird es wahrscheinlich noch einige Jahre der Standard beim Verbinden mit dem ISP sein.
 
 \appendices 
-\section{Proof of the First Zonklar Equation} 
-Appendix one text goes here. 
-% you can choose not to have a title for an appendix 
-% if you want by leaving the argument blank 
-\section{} 
-Appendix two text goes here. 
-% use section* for acknowledgement 
 \section*{Acknowledgment} 
-The authors would like to thank... 
+The authors would like to thank...deiner Mudda
 % Can use something like this to put references on a page 
 % by themselves when using endfloat and the captionsoff option. 
 \ifCLASSOPTIONcaptionsoff 
