--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 % - 6 pages including pictures and references
 % - Wikipedia is not an allowed reference
 % - And do not use pictures or examples that you can find in the exercises or the lecture.
-\documentclass[journal,11pt]{IEEEtran}
+\documentclass[journal,10pt]{IEEEtran}
 \usepackage[utf8x]{inputenc}
 \hyphenation{op-tical net-works semi-conduc-tor} 
 \usepackage[pdftex]{graphicx}
@@ -217,8 +217,30 @@ Pakets ist kein weiterer Datenaustausch über die Session erlaubt.
 %
 \section{Vor- und Nachteile} 
 %
-Ein P mehr als PP, und zwei mehr als P.
-\\
+Dass PPP entstand ursprünglich aus dem Serial Line Internet Protocol (SLIP).
+Eine Betrachtung der Unterschiede bzw. Neuerungen in PPP lässt somit eine
+Bewertung der Vor- und Nachteile zu (vgl. \cite{ppp_slip_uniwi}). Die Vorteile
+von PPP lassen sich zunächst wie folgt zusammenfassen:
+%
+\begin{itemize}
+\item[Mehrere Netzwerkprotokolle über einen Übertragungskanal] Das ältere SLIP-Protokoll unterstützt immer nur ein einziges Netzwerkprotokoll.
+\item[Fehlerkorrekturverfahren] Frames mit falschen Checksummen werden von PPP erneut vom Kommunikationspartner angefordert. Das ältere
+	SLIP unterstützt kein Fehlerkorrekturverfahren, sondern delegiert die Fehlerbehandlung an andere Protokolle weiter. Dies bedeutet i.d.R. zusätzliche
+	Arbeitsschritte welche die Fehlerkorrektur und somit auch die Übertragung verlangsamen können.
+\item[Software-Flußkontrolle] Bei Aushanldung der Steuerzeichen über LCP kann PPP auch auf Datenübertragungseinrichtungen verwendet werden, die mit Software-Flußkontrolle (XON/XOFF) arbeiten - z.B. zwischen Modem und Computer. SLIP unterstützt dies nicht.
+\item[Vereinfachung der Authentifizierung] Bei identischem Authentisierungsverfahren beider Kommunikationspartner entfällt im allgemeinen die manuelle bzw. skriptgestützte Identifizierung beim Kommunikationspartner, was in vielen Fällen auch die Verwendung von Skripts überflüssig macht. SLIP unterstützt dies nicht.
+\item[Automatisches Aushandeln einer IP-Adresse] PPP - genauer IPCP - unterstützt von sich aus das automatische Aushandeln einer dynamisch zugewiesenen IP-Adresse im gegensatz zu SLIP.
+\item[Aushalndung der Kompression] Die Kommunikationspartner handeln mittels IPCP aus, ob Van-Jacobson-Header-Compression verwendet werden soll. Im Fall von SLIP muss der Kommunikationspartner wissen, ob das Verfahren unterstützt wird oder nicht und die Software entsprechend konfigurieren.
+\end{itemize}
+%
+Neben den Vorteilen existieren allerdings auch die folgenden Nachteile:
+%
+\begin{itemize}
+\item[Verzögerung der Konfiguration] Eine Aushandlung der Einstellungen durch das LCP und das darauffolgende Aushandeln der Einstellungen durch die verschiedenen NCPs kann einige Sekunden in Anspruch nehmen. Bei SLIP kommt es zu keiner Verzögerung.
+\item[Daten overhead] PPP-Frames zur Übertragung von Netzwerkprotokoll-Daten enthalten zusätzlich zu den Daten standardmäßig 9 Bytes Steuer- und Kontrollinformation. Selbst unter Verwendung von Address-and-Control-Field-Compression und Protocol-Field-Compression womit Zusatzinformation somit auf 4 Bytes reduziert werden, sind das immer noch 3 Bytes mehr als bei der Verwendung von SLIP, das mit einem Byte an Zusatzinformation auskommt.
+\item[Zusätzliche Systemressourcen] Der komplizierte Aufbau von PPP bedingt wesentlich mehr Systemressourcen (Rechenzeit, Speicher) als SLIP, das mit einer sehr einfachen Frame-Struktur das Auslangen findet. Bei schnellen PPP-Verbindungen und unzureichend ausgestatteten Computern kann dies zu Einbußen bei der Arbeitsgeschwindigkeit führen.
+\item[Größere zu übertragende Datenmenge] Bei vielen mit LCP zu übertragenden Steuerzeichen, die vor der Übertragung umkodiert werden müssen, erhöht sich die zu übertragende Datenmenge, vorausgesetzt die zu übertragenden Datagramme enthalten viele solcher Steuerzeichen. Der Grund hierfür ist das jedes Steuerzeichen, das ursprünglich mit einem Byte dargestellt werden konnte, nach dem Umkodieren zwei Byte beansprucht. 
+\end{itemize}
 %
 \section{Fazit} 
 Wie in der Einf\"uhrung erw\"ahnt, war das Point-to-Point Protocol notwendig, da die damals aktuellen Standards nicht alle mittlerweile ben\"otigten Anforderungen erf\"ullen konnten. Durch die einfache Handhabung der aufgebauten verbindung f\"ur Netzwerk-Schicht-Protokolle, ist vermutlich auch die grosse Verbreitung des Protokolls zu erkl\"aren. Bei fast allen M\"oglichkeiten eine Internetverbindung aufzubauen (sei es \"uber DSL oder im Mobilfunknetz) wird PPP als Einw\"ahlprotokoll genutzt. Zwar wird im Kabelnetz mittlerweile ein anderes Protokoll verwendet, doch durch die einfache Umsetzung des Point-to-Point Protokolls wird es wahrscheinlich noch einige Jahre der Standard beim Verbinden mit dem ISP sein.
@@ -264,9 +286,10 @@ James F. Kurose / Keith W. Ross, Computernetzwerke, Pearson, 2012
 % PPPoE Struktur, Verbindungsablauf
 \bibitem{pppoe_h3c} Aufbau eines PPPoE-Pakets,\newblock H3C \newblock http://www.h3c.com/portal/Products\_\_\_Solutions/Technology/\\WAN/Technology\_White\_Paper/200911/654415\_57\_0.htm
 % PPP Verbindungsablauf
-\bibitem{ppp_startnetworks} PPP-Spezifischer Teil eines PPPoE-Verbindungsaufbaus,\newblock Startnetworks \newblock http://www.startnetworks.info/2011/05/pppoe\-theory.html
+\bibitem{ppp_startnetworks} PPP-Verbindungsaufbau,\newblock Startnetworks \newblock http://www.startnetworks.info/2011/05/pppoe\-theory.html
 % PPP Verbindungsablauf (Detail)
-\bibitem{ppp_oracle} PPP-Spezifischer Teil eines PPPoE-Verbindungsaufbaus,\newblock Oracle \newblock http://docs.oracle.com/cd/E19096-01/sol.ppp301/805-4018/6j3qil163/index.html
+\bibitem{ppp_oracle} PPP-Zustände,\newblock Oracle \newblock http://docs.oracle.com/cd/E19096-01/sol.ppp301/805-4018/6j3qil163/index.html
+\bibitem{ppp_slip_uniwi} PPP, Eine Alternative zu SLIP?,\newblock Uni Wien \newblock http://comment.univie.ac.at/95-3/19/
 \bibitem{ppposi} Eingliederung von PPP im OSI--Modell,\newblock Abrufdatum: 29.05.2014, \newblock http://www.tcpipguide.com/free/
 \bibitem{compnetzw} Computernetzwerke, \newblock Andrew S. Tanenbaum,  \newblock Pearson Verlag, \newblock 5. Auflage, \newblock 2012.
 \end{thebibliography} 
